--- a/DevTenderFrontend/vercel.json
+++ b/DevTenderFrontend/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/", "permanent": true }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
